objects/Refund__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_to_be_refunded__c</fullName>
        <label>Amount to be refunded?</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Associated_Department_del__c</fullName>
        <label>Associated Department</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Advisors</fullName>
                </value>
                <value>
                    <fullName>Advisor Admins</fullName>
                </value>
                <value>
                    <fullName>Service</fullName>
                </value>
                <value>
                    <fullName>Mailroom</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Operations</fullName>
                </value>
                <value>
                    <fullName>Pensions</fullName>
                </value>
                <value>
                    <fullName>Processing</fullName>
                </value>
                <value>
                    <fullName>Professional Advisors</fullName>
                </value>
                <value>
                    <fullName>Renewals</fullName>
                </value>
                <value>
                    <fullName>Tax</fullName>
                </value>
                <value>
                    <fullName>Bookkeeping</fullName>
                </value>
                <value>
                    <fullName>BCP</fullName>
                </value>
                <value>
                    <fullName>Estate Planning</fullName>
                </value>
                <value>
                    <fullName>Events</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Associated_Employee_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Associated Employee</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Refunds2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Associated_Employee_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Associated Employee</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Refunds3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Associated_Employee_4__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Associated Employee</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Refunds4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Associated_Employee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Associated Employee</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Refunds1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Check_or_Wire_Amount__c</fullName>
        <label>Check or Wire Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Client__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Refunds</relationshipLabel>
        <relationshipName>Refunds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Client_s_Email__c</fullName>
        <inlineHelpText>An email will be sent to the client when the refund status is &quot;Refund Completed&quot;</inlineHelpText>
        <label>Client&apos;s Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Client_s_First_Name__c</fullName>
        <formula>Client__r.First_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client&apos;s First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Created_By_Email__c</fullName>
        <label>Created By Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Credit_Sale__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SCH-0017</description>
        <label>Credit Sale</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Refunds (Credit Sale)</relationshipLabel>
        <relationshipName>Refunds1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_Time_Complete__c</fullName>
        <description>SCH-0060</description>
        <label>Date/Time Complete</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_of_Original_Payment__c</fullName>
        <label>Date of Original Payment</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_in_this_status__c</fullName>
        <formula>IF ( 
 ISBLANK( Status_Updated__c ) ,
 IF( 
  NOW() -  CreatedDate &gt; 0, NOW() -  CreatedDate, 1
 )
,
 IF( 
  NOW() - Status_Updated__c &gt; 0, NOW() - Status_Updated__c , 1
 )
)</formula>
        <label>Days in this status</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_till_Completed__c</fullName>
        <formula>IF ( 
 NOT(ISBLANK( Date_Time_Complete__c )),
 Date_Time_Complete__c -  CreatedDate ,
 0
)</formula>
        <label>Days till Completed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expedite_Requested_by_Manager__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Expedite Requested by Manager</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Expedite__c</fullName>
        <formula>IF( Expedite_Requested_by_Manager__c = TRUE, &quot;Yes&quot;, &quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expedite</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_the_client_keeping_Platinum_services__c</fullName>
        <label>Is the client keeping Platinum services?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_this_a_duplicate_charge__c</fullName>
        <label>Is this a duplicate charge?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Date_Assigned_to_Bill__c</fullName>
        <label>Last Date Assigned - Internal Accounting</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Four_Digits_of_Purchase_Card__c</fullName>
        <label>Last Four Digits of Purchase Card</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_four_of_card_or_full_check_number__c</fullName>
        <label>Last four of card or full check number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Link__c</fullName>
        <formula>&quot;https://andersonadvisors.my.salesforce.com/&quot;+ Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Link_for_Communities__c</fullName>
        <formula>&quot;https://platinum.force.com/aba/s/detail/&quot;+  Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Link for Communities</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Address_Confirmed__c</fullName>
        <label>Mailing Address Confirmed?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mailing_Address__c</fullName>
        <label>Mailing Address</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Number_of_hrs__c</fullName>
        <formula>( now()-  Status_Updated__c)*24</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of hrs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Open_Days__c</fullName>
        <formula>IF(
  NOT( CONTAINS( TEXT( Status__c ) , &quot;Complete&quot; )), 
  NOW() -  CreatedDate,
  Status_Updated__c - CreatedDate 
)</formula>
        <label>Open Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Other_Items_Description__c</fullName>
        <label>Other Items Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Other_Items__c</fullName>
        <label>Other Items</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Payment_Research_Comments__c</fullName>
        <label>Payment Research Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Payment_Research_Requested__c</fullName>
        <label>Payment Research Requested</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Payment_Research_Type__c</fullName>
        <label>Payment Research Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Confirmation of Wire Transfer</fullName>
                </value>
                <value>
                    <fullName>Confirmation of Check Received</fullName>
                </value>
                <value>
                    <fullName>Refund Check not received by the client</fullName>
                </value>
                <value>
                    <fullName>Caller does not know who we are and/or no relationship</fullName>
                </value>
                <value>
                    <fullName>Duplicates Charges not showing in Salesforce</fullName>
                </value>
                <value>
                    <fullName>Other (explain in comments)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Prevention_Comments__c</fullName>
        <label>Prevention Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Refund_Prevented_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Refund Prevented By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Refunds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Refund_Reason__c</fullName>
        <label>Refund Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Applied to Another Sale</fullName>
                </value>
                <value>
                    <fullName>Client Changed Mind</fullName>
                </value>
                <value>
                    <fullName>Duplicate Charge</fullName>
                </value>
                <value>
                    <fullName>Incorrect Amount Charged</fullName>
                </value>
                <value>
                    <fullName>Incorrect Card Used</fullName>
                </value>
                <value>
                    <fullName>Not Using the Service</fullName>
                </value>
                <value>
                    <fullName>Oversold</fullName>
                </value>
                <value>
                    <fullName>Poor Service</fullName>
                </value>
                <value>
                    <fullName>Seven Day Refund Period</fullName>
                </value>
                <value>
                    <fullName>Tax Penalties</fullName>
                </value>
                <value>
                    <fullName>Unable to Fulfill</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Client paid fee</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Refund_Request_Signed__c</fullName>
        <label>Refund Request Signed?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Refund_or_Credit__c</fullName>
        <label>Refund or Credit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Credit</fullName>
                </value>
                <value>
                    <fullName>Refund</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Report_User__c</fullName>
        <formula>IF(

$User.Id = Owner:User.Id ||
/* $User.FirstName+$User.LastName = Owner:User.FirstName+Owner:User.LastName || */
If( CONTAINS( Owner:User.Email, &quot;+commtest@andersonadvisors.com&quot;),
If((Owner:User.FirstName + SUBSTITUTE( Owner:User.LastName , &quot; (Community Test)&quot;, &quot;&quot;) )= ($User.FirstName + $User.LastName ),True,False),If((Owner:User.FirstName+ Owner:User.LastName)=($User.FirstName + SUBSTITUTE( $User.LastName , &quot; (Community Test)&quot;, &quot;&quot;) ),True,false)) ,

1,
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Report User</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Request_Type__c</fullName>
        <description>SCH-0042</description>
        <label>Request Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Refund</fullName>
                </value>
                <value>
                    <fullName>Credit</fullName>
                </value>
                <value>
                    <fullName>Research</fullName>
                </value>
                <value>
                    <fullName>Duplicate Charge</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Research_Amount__c</fullName>
        <label>Research Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sale__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sale</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Refunds</relationshipLabel>
        <relationshipName>Refunds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Services_to_be_Refunded__c</fullName>
        <label>Services to be Refunded</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Skip_Validation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SCH-0030
Used to skip a validation rule. Usually needed in an automated process.</description>
        <label>Skip Validation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status_Updated__c</fullName>
        <label>Status Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>SCH-0035</description>
        <inlineHelpText>Need More Info = Created By
Review = Dan
Refund = Jenn
Create Credit = Bill
Use Credit on File = Bill
No Refund = Kambria
Refund Completed = Kambria for Final Review
Completed = Kambria</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Need More Info</fullName>
                </value>
                <value>
                    <fullName>Info Updated</fullName>
                </value>
                <value>
                    <fullName>Review</fullName>
                </value>
                <value>
                    <fullName>No Refund</fullName>
                </value>
                <value>
                    <fullName>Waiting on info</fullName>
                </value>
                <value>
                    <fullName>Refund</fullName>
                </value>
                <value>
                    <fullName>Create Credit</fullName>
                </value>
                <value>
                    <fullName>Use Credit on File</fullName>
                </value>
                <value>
                    <fullName>Refund Completed</fullName>
                </value>
                <value>
                    <fullName>Completed - Includes Refund</fullName>
                </value>
                <value>
                    <fullName>Completed - No Refund Included</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Supervisor__c</fullName>
        <label>Supervisor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Bill Widener</fullName>
                </value>
                <value>
                    <fullName>Chance Truscott</fullName>
                </value>
                <value>
                    <fullName>Jeff Webb</fullName>
                </value>
                <value>
                    <fullName>Jennifer Phipps</fullName>
                </value>
                <value>
                    <fullName>Kerri Summey</fullName>
                </value>
                <value>
                    <fullName>Troy Butler</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Amount_of_Check_or_Wire__c</fullName>
        <label>Total Amount of Check or Wire</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_Changed_From_Refund_to_Credit__c</fullName>
        <label>Type Changed From Refund to Credit</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Was_subscription_stopped__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Was subscription stopped?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Who_requested_the_refund__c</fullName>
        <label>Who requested the refund?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Why_is_the_refund_being_requested__c</fullName>
        <label>Why is the refund being requested?</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>mergefieldCreditvsRefund__c</fullName>
        <formula>IF( TEXT(Refund_or_Credit__c) = &quot;Credit&quot;, &quot;&quot;, &quot;You should see your refund in approximately three business days.&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>refundOrCreditMergeField</label>
        <type>Text</type>
    </fields>
    <label>Refund</label>
    <listViews>
        <fullName>Action_Required</fullName>
        <columns>NAME</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>Request_Type__c</columns>
        <columns>Status__c</columns>
        <columns>Comments__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>New,Info Updated,No Refund,Create Credit,Use Credit on File,Refund Completed,Completed - Includes Refund,Completed - No Refund Included</value>
        </filters>
        <filters>
            <field>OWNER.FIRST_NAME</field>
            <operation>notEqual</operation>
            <value>Jennifer,Bill,Michelle</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterThan</operation>
            <value>1/1/2021 12:00 AM</value>
        </filters>
        <label>Action Required</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Request_Type__c</columns>
        <columns>Sale__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Client__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Request_Type__c</field>
            <operation>notEqual</operation>
            <value>Credit,Research,Duplicate Charge</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Create Credit,Use Credit on File</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Info_Updated_Refunds</fullName>
        <columns>NAME</columns>
        <columns>Client__c</columns>
        <columns>Sale__c</columns>
        <columns>Amount__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Refund_or_Credit__c</columns>
        <columns>Status__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Need More Info,Info Updated,Review,Waiting on info,Create Credit</value>
        </filters>
        <label>Credits Not Processed</label>
    </listViews>
    <listViews>
        <fullName>Kambria</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Comments__c</columns>
        <columns>Client__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Need More Info,Review,No Refund,Waiting on info,Refund,Create Credit,Use Credit on File,Completed - Includes Refund,Completed - No Refund Included</value>
        </filters>
        <filters>
            <field>LAST_UPDATE</field>
            <operation>greaterThan</operation>
            <value>5/1/2021 12:00 AM</value>
        </filters>
        <filters>
            <field>OWNER.FIRST_NAME</field>
            <operation>notEqual</operation>
            <value>Michelle,Kathy</value>
        </filters>
        <label>To Be Processed</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
            <group>Cayden_Cupper</group>
            <group>Job_Role_QA</group>
            <group>Kambria_Stephen</group>
            <group>KateSchruhl</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Michelle_s_Refunds</fullName>
        <columns>NAME</columns>
        <columns>Sale__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Request_Type__c</columns>
        <columns>Status__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OWNER.FIRST_NAME</field>
            <operation>contains</operation>
            <value>Michelle,Nick</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>New,Info Updated,Review,No Refund,Refund,Create Credit,Use Credit on File</value>
        </filters>
        <filters>
            <field>OWNER.LAST_NAME</field>
            <operation>contains</operation>
            <value>Fuller,Roeper</value>
        </filters>
        <label>Internal Accounting - Refunds/Credits</label>
        <sharedTo>
            <group>Internal_Accounting</group>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Refund Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Refunds</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Cannot_Change_Owner</fullName>
        <active>true</active>
        <description>SCH-0030</description>
        <errorConditionFormula>$Permission.AllowRefundOwnerChange = FALSE &amp;&amp;
ISCHANGED(OwnerId) &amp;&amp; 
Skip_Validation__c = FALSE</errorConditionFormula>
        <errorMessage>Directly changing the owner is not allowed on Refunds. Please change the Status field instead.</errorMessage>
    </validationRules>
</CustomObject>